use Map for filtering and add filter, sort and parse exceptions

--- a/src/main/resources/db/changelog/changelog-1.0.yaml
+++ b/src/main/resources/db/changelog/changelog-1.0.yaml
@@ -55,7 +55,7 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: release
+                  name: release_date
                   type: date
                   constraints:
                     nullable: false
