add GET /genres/{genreId}/movies

--- a/src/main/resources/db/changelog/changelog-1.0.yaml
+++ b/src/main/resources/db/changelog/changelog-1.0.yaml
@@ -4,6 +4,8 @@ databaseChangeLog:
       author: JakubPavlicek
       changes:
 
+        # ENABLE uuid_generate_v4() FUNCTION
+
         - sql:
             sql: "CREATE EXTENSION IF NOT EXISTS \"uuid-ossp\";"
 
