--- a/src/main/resources/db/changelog/changelog-1.0.yaml
+++ b/src/main/resources/db/changelog/changelog-1.0.yaml
@@ -20,8 +20,8 @@ databaseChangeLog:
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
-                    unique: true
                     nullable: false
+                    unique: true
               - column:
                   name: name
                   type: varchar(100)
@@ -33,13 +33,13 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
-                  name: length
+                  name: duration
                   type: int
                   constraints:
                     nullable: false
               - column:
                   name: description
-                  type: varchar(1000)
+                  type: clob
                   constraints:
                     nullable: false
               - column:
@@ -48,6 +48,28 @@ databaseChangeLog:
                   constraints:
                     nullable: true
                     foreignKeyName: fk_director
+              - column:
+                  name: rating
+                  type: double
+                  defaultValueNumeric: '0.0'
+                  constraints:
+                    nullable: false
+              - column:
+                  name: review_count
+                  type: int
+                  defaultValueNumeric: '0'
+                  constraints:
+                    nullable: false
+              - column:
+                  name: poster_url
+                  type: clob
+                  constraints:
+                    nullable: false
+              - column:
+                  name: trailer_url
+                  type: clob
+                  constraints:
+                    nullable: false
 
         - createTable:
             tableName: country
@@ -58,8 +80,8 @@ databaseChangeLog:
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
-                    unique: true
                     nullable: false
+                    unique: true
               - column:
                   name: name
                   type: varchar(15)
@@ -76,11 +98,29 @@ databaseChangeLog:
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
-                    unique: true
                     nullable: false
+                    unique: true
               - column:
                   name: name
                   type: varchar(15)
+                  constraints:
+                    nullable: false
+                    unique: true
+
+        - createTable:
+            tableName: production_company
+            columns:
+              - column:
+                  name: company_id
+                  type: varchar(255)
+                  defaultValueComputed: uuid_generate_v4()
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+                    unique: true
+              - column:
+                  name: name
+                  type: varchar(100)
                   constraints:
                     nullable: false
                     unique: true
@@ -94,14 +134,25 @@ databaseChangeLog:
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
-                    unique: true
                     nullable: false
+                    unique: true
               - column:
                   name: name
                   type: varchar(50)
                   constraints:
                     nullable: false
                     unique: true
+              - column:
+                  name: bio
+                  type: clob
+                  constraints:
+                    nullable: true
+              - column:
+                  name: gender_id
+                  type: varchar(255)
+                  constraints:
+                    nullable: true
+                    foreignKeyName: fk_gender
 
         - createTable:
             tableName: director
@@ -112,11 +163,40 @@ databaseChangeLog:
                   defaultValueComputed: uuid_generate_v4()
                   constraints:
                     primaryKey: true
-                    unique: true
                     nullable: false
+                    unique: true
               - column:
                   name: name
                   type: varchar(50)
+                  constraints:
+                    nullable: false
+                    unique: true
+              - column:
+                  name: bio
+                  type: clob
+                  constraints:
+                    nullable: true
+              - column:
+                  name: gender_id
+                  type: varchar(255)
+                  constraints:
+                    nullable: true
+                    foreignKeyName: fk_gender
+
+        - createTable:
+            tableName: gender
+            columns:
+              - column:
+                  name: gender_id
+                  type: varchar(255)
+                  defaultValueComputed: uuid_generate_v4()
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+                    unique: true
+              - column:
+                  name: gender
+                  type: varchar(15)
                   constraints:
                     nullable: false
                     unique: true
@@ -156,8 +236,32 @@ databaseChangeLog:
                     foreignKeyName: fk_genre
 
         - createTable:
-            tableName: movie_actor
+            tableName: movie_production
             columns:
+              - column:
+                  name: movie_id
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+                    foreignKeyName: fk_movie
+              - column:
+                  name: company_id
+                  type: varchar(255)
+                  constraints:
+                    nullable: false
+                    foreignKeyName: fk_company
+
+        - createTable:
+            tableName: movie_cast
+            columns:
+              - column:
+                  name: movie_cast_id
+                  type: varchar(255)
+                  defaultValueComputed: uuid_generate_v4()
+                  constraints:
+                    primaryKey: true
+                    nullable: false
+                    unique: true
               - column:
                   name: movie_id
                   type: varchar(255)
@@ -170,6 +274,11 @@ databaseChangeLog:
                   constraints:
                     nullable: false
                     foreignKeyName: fk_actor
+              - column:
+                  name: role
+                  type: varchar(100)
+                  constraints:
+                    nullable: false
 
         # FOREIGN KEYS
 
@@ -209,14 +318,28 @@ databaseChangeLog:
             referencedColumnNames: genre_id
 
         - addForeignKeyConstraint:
-            baseTableName: movie_actor
+            baseTableName: movie_production
             baseColumnNames: movie_id
             constraintName: fk_movie
             referencedTableName: movie
             referencedColumnNames: movie_id
 
         - addForeignKeyConstraint:
-            baseTableName: movie_actor
+            baseTableName: movie_production
+            baseColumnNames: company_id
+            constraintName: fk_company
+            referencedTableName: production_company
+            referencedColumnNames: company_id
+
+        - addForeignKeyConstraint:
+            baseTableName: movie_cast
+            baseColumnNames: movie_id
+            constraintName: fk_movie
+            referencedTableName: movie
+            referencedColumnNames: movie_id
+
+        - addForeignKeyConstraint:
+            baseTableName: movie_cast
             baseColumnNames: actor_id
             constraintName: fk_actor
             referencedTableName: actor
@@ -522,3 +645,33 @@ databaseChangeLog:
               - column:
                   name: name
                   value: 'Switzerland'
+
+        # INSERT COUNTRIES
+
+        - insert:
+            tableName: gender
+            columns:
+              - column:
+                  name: gender
+                  value: 'Unspecified'
+
+        - insert:
+            tableName: gender
+            columns:
+              - column:
+                  name: gender
+                  value: 'Male'
+
+        - insert:
+            tableName: gender
+            columns:
+              - column:
+                  name: gender
+                  value: 'Female'
+
+        - insert:
+            tableName: gender
+            columns:
+              - column:
+                  name: gender
+                  value: 'Non-binary'
