--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,7 @@
 								<apiPackage>com.movie_manager</apiPackage>
 								<modelPackage>com.movie_manager.dto</modelPackage>
 								<interfaceOnly>true</interfaceOnly>
+								<generateBuilders>true</generateBuilders>
 							</configOptions>
 						</configuration>
 					</execution>
