--- a/src/main/resources/db/changelog/changelog-1.0.yaml
+++ b/src/main/resources/db/changelog/changelog-1.0.yaml
@@ -70,6 +70,11 @@ databaseChangeLog:
                   type: clob
                   constraints:
                     nullable: false
+              - column:
+                  name: updated_at
+                  type: timestamp
+                  constraints:
+                    nullable: false
 
         - createTable:
             tableName: country
