--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,6 @@ services:
   db:
     image: postgres:16.4
     container_name: postgres
-    restart: always
     env_file:
       - .env
     healthcheck:
@@ -17,24 +16,40 @@ services:
     networks:
       - spring-net
 
-  moviemanager:
-    image: moviemanager
-    container_name: moviemanager
-    profiles:
-      - prod
-    build:
-      context: .
+  keycloak:
+    image: keycloak/keycloak:25.0.2
+    container_name: keycloak
+    ports:
+      - "8090:8080"
     env_file:
       - .env
-    depends_on:
-      db:
-        condition: service_healthy
-    ports:
-      - "8080:8080"
     networks:
       - spring-net
     command:
-      - "--spring.profiles.active=prod"
+      - "start-dev"
+
+#  moviemanager:
+#    image: moviemanager
+#    container_name: moviemanager
+#    build:
+#      context: .
+#    develop:
+#      watch:
+#        - action: rebuild
+#          path: .
+#    environment:
+#      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${POSTGRES_DB}
+#      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+#      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
+#    depends_on:
+#      db:
+#        condition: service_healthy
+#      keycloak:
+#        condition: service_started
+#    ports:
+#      - "8088:8080"
+#    networks:
+#      - spring-net
 
 networks:
   spring-net:
