--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,10 +1,11 @@
 spring:
-  profiles:
-    active: dev
-  docker:
-    compose:
-      profiles:
-        active: dev
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+#          issuer-uri: http://keycloak:8080/realms/movie-manager
+          issuer-uri: http://localhost:8090/realms/movie-manager
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
   datasource:
     driver-class-name: org.postgresql.Driver
   liquibase:
@@ -16,7 +17,7 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        #        generate_statistics: true
+#        generate_statistics: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
 springdoc:
@@ -24,25 +25,3 @@ springdoc:
     version: openapi_3_1
   swagger-ui:
     url: openapi.yaml
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: dev
-  datasource:
-    url: jdbc:postgresql://localhost:5432/movie_manager
-    username: postgres
-    password: postgres
-
----
-
-spring:
-  config:
-    activate:
-      on-profile: prod
-  datasource:
-    url: jdbc:postgresql://db:5432/${POSTGRES_DB}
-    username: ${POSTGRES_USER}
-    password: ${POSTGRES_PASSWORD}
