add client module

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -4,6 +4,9 @@ logging:
       springframework:
         security: TRACE
 spring:
+  docker:
+    compose:
+      file: api/docker-compose.yaml
   security:
     oauth2:
       resourceserver:
