--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -28,28 +28,28 @@ services:
     command:
       - "start-dev"
 
-#  moviemanager:
-#    image: moviemanager
-#    container_name: moviemanager
-#    build:
-#      context: .
-#    develop:
-#      watch:
-#        - action: rebuild
-#          path: .
-#    environment:
-#      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${POSTGRES_DB}
-#      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
-#      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
-#    depends_on:
-#      db:
-#        condition: service_healthy
-#      keycloak:
-#        condition: service_started
-#    ports:
-#      - "8088:8080"
-#    networks:
-#      - spring-net
+  moviemanager:
+    image: moviemanager
+    container_name: moviemanager
+    build:
+      context: .
+    develop:
+      watch:
+        - action: rebuild
+          path: .
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/${POSTGRES_DB}
+      - SPRING_DATASOURCE_USERNAME=${POSTGRES_USER}
+      - SPRING_DATASOURCE_PASSWORD=${POSTGRES_PASSWORD}
+    depends_on:
+      db:
+        condition: service_healthy
+      keycloak:
+        condition: service_started
+    ports:
+      - "8088:8080"
+    networks:
+      - spring-net
 
 networks:
   spring-net:
