--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -11,8 +11,8 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-#          issuer-uri: http://keycloak:8080/realms/movie-manager
-          issuer-uri: http://localhost:8090/realms/movie-manager
+          issuer-uri: http://keycloak:8080/realms/movie-manager
+#          issuer-uri: http://localhost:8090/realms/movie-manager
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
   datasource:
     driver-class-name: org.postgresql.Driver
